...
    <View
      style={{
        width: '100%',
        maxHeight: '100%',
      }}>
      <FlatList
        testID="restaurantData"
        stickyHeaderIndices={[1]}
        data={Array.from(
          { length: renderFunctions.length },
          (_, index) => index,
        )}
        renderItem={listRenderItem}
...
        <SafeAreaView edges={['bottom']}>
          <CartFooter
            onSubmit={() => navigate('CheckoutSummary', { restaurant })}
            restaurant={restaurant}
            cart={props.cart}
            initLoading={props.cartLoading}
            testID="cartSubmit"
            disabled={isLoading}
          />
        </SafeAreaView>
      ) : null}

      <BottomModal
...
