...

  return (
    <CartFooter
      onSubmit={onSubmit}
      cart={cart}
      restaurant={restaurant}
      testID="cartSummarySubmit"
      isLoading={isLoading}
      disabled={isValid !== true}
    />
  );
}

...
              <Text style={{ flex: 1, textAlign: 'right' }}>
                {this.props.t('LEARN_MORE')}
              </Text>
            </ActionButton>
          )}
          <ActionButton
            testID="shippingTimeRangeButton"
            onPress={() => this.props.showTimingModal(true)}
            iconName="clock-o">
            <Text style={{ flex: 2 }} fontSize="sm">
              {this.props.timeAsText}
            </Text>
            <Text style={{ flex: 1, textAlign: 'right' }}>
...
