...
            </Text>
          ))}
        </View>
      ) : null}
      <FooterButton
        isLoading={isLoading && errors.length === 0}
        testID="cashOnDeliverySubmit"
        text={t('SUBMIT')}
        onPress={onSubmit}
      />
      <TimeRangeChangedModal />
    </Center>
  );
...
