...
          if (content.type === 'SET_PAYMENT_ORDER_ID') {
            setPaymentOrderId(content.detail)
          }

          if (content.type === 'FULL_PAYMENT_DONE') {
            onSubmit({
              cardholderName: '',
              savedCardSelected: null,
              saveCard: false,
              paygreenPaymentOrderId: paymentOrderID
            })
          }

        }} />
      <FooterButton
        isDisabled={ false }
        testID="creditCardSubmit"
        text={t('PAY_AMOUNT', {
          amount: formatPrice(cart.total),
        })}
        onPress={ () => {
          webViewRef.current.postMessage(JSON.stringify({ type: 'SUBMIT' }))
        }}
...
