...
  return (
    <>
      <Text mt="8">
        {t('CART_TIME_RANGE_CHANGED_MODAL_CHOOSE_TIME_RANGE_TEXT')}
      </Text>
      <TimingCartSelect orderNodeId={orderNodeId} onValueChange={setValue} />
      <Button testID="setShippingTimeRange" mt="8" onPress={onSchedule}>
        <Text>
          {t('CART_TIME_RANGE_CHANGED_MODAL_SELECT_TIME_RANGE_ACTION')}
        </Text>
      </Button>
      <Button mt="2" variant="link" onPress={chooseRestaurant}>
        <Text>
...
      isVisible={isModalVisible}
      onModalHide={onModalHide}
      onModalShow={() => {
        tracker.logEvent('Checkout', 'openTimeRangeChangedModal');
      }}>
      <View
        testID="timeRangeChangedModal"
        style={[styles.modalContent, { backgroundColor }]}>
        <Heading size="sm" mb="4">
          {t('CART_TIME_RANGE_CHANGED_MODAL_TITLE')}
        </Heading>
        <DangerAlert text={t('CART_TIME_RANGE_CHANGED_MODAL_MESSAGE')} />
        <Content isModalOpen={isModalVisible} />
...
