...
      },
    );

    return (
      <FlatList
        contentContainerStyle={{ flexGrow: 1 }}
        testID="restaurantList"
        data={restaurantsWithTestIDs}
        keyExtractor={(item, index) => item['@id']}
        renderItem={({ item, index }) => this.renderItem(item, index)}
        ListEmptyComponent={this._renderEmptyState}
      />
    );
...
