...
                <FormControl isInvalid={hasError('email')} className="mb-4">
                  <FormControlLabel>
                    <FormControlLabelText>{this.props.t('USERNAME')}</FormControlLabelText>
                  </FormControlLabel>
                  <Input>
                    <InputField
                      testID="loginUsername"
                      autoCorrect={false}
                      autoCapitalize="none"
                      style={{ height: 40 }}
                      returnKeyType="next"
                      onChangeText={handleChange('email')}
                      onBlur={handleBlur('email')}
...
